# seed-scaffold

./: .flake8  README.md  pyproject.toml
docs/: USER_CONFIG.md
src/seed_scaffold/: cli.py  config.py
src/seed_scaffold/templates/meson-c-lib/files/: AGENTS.md  README.md  meson.build
src/seed_scaffold/templates/meson-c-lib/files/include/: __PROJECT_SLUG__.h  __PROJECT_SLUG___conf.h
tests/: test_config.py  test_create_project.py
